@@ -125,7 +125,7 @@ allprojects {
     maven { url "https://repository.apache.org/content/repositories/snapshots/" }
   }
 
-  dependencies { errorprone("com.google.errorprone:error_prone_core") }
+  dependencies { errorprone "com.google.errorprone:error_prone_core" }
 
   apply plugin: 'com.diffplug.gradle.spotless'
   spotless {
@@ -189,8 +189,6 @@ allprojects {
       check('ImmutableEnumChecker', CheckSeverity.OFF)
       // This is a style check instead of an error-prone pattern.
       check('UnnecessaryParentheses', CheckSeverity.OFF)
-      // Lazy impl causes excess CPU usage O(n) of non-final fiield when it should be O(1).
-      check('FieldCanBeFinal', CheckSeverity.OFF)
 
       // This check is broken in Java 12.  See https://github.com/google/error-prone/issues/1257
       if (JavaVersion.current() == JavaVersion.VERSION_12) {
@@ -201,6 +199,7 @@ allprojects {
         check('TypeParameterUnusedInFormals', CheckSeverity.OFF)
       }
 
+      check('FieldCanBeFinal', CheckSeverity.WARN)
       check('InsecureCryptoUsage', CheckSeverity.WARN)
       check('WildcardImport', CheckSeverity.WARN)
     }
@@ -310,7 +309,7 @@ subprojects {
   }
 
   task testSupportJar(type: Jar) {
-    baseName = "${project.name}-support-test"
+    archiveBaseName = "${project.name}-support-test"
     classifier = 'test-support'
     from sourceSets.testSupport.output
   }
@@ -402,6 +401,12 @@ subprojects {
     group = "verification"
     description = "Runs the Besu integration tests"
 
+    jvmArgs = [
+      '--add-opens',
+      'java.base/java.util=ALL-UNNAMED',
+      '--add-opens',
+      'java.base/java.util.concurrent=ALL-UNNAMED'
+    ]
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
     outputs.upToDateWhen { false }
@@ -477,7 +482,7 @@ startScripts {
 
 
 dependencies {
-  compile project(':besu')
+  implementation project(':besu')
   errorprone 'com.google.errorprone:error_prone_core'
 }
 
@@ -500,7 +505,7 @@ distTar {
     delete fileTree(dir: 'build/distributions', include: '*.tar.gz')
   }
   compression = Compression.GZIP
-  extension = 'tar.gz'
+  archiveExtension = 'tar.gz'
 }
 
 distZip {
@@ -685,8 +690,8 @@ bintray {
   key = bintrayKey
 
   filesSpec {
-    from distTar.destinationDir.path
-    from distZip.destinationDir.path
+    from distTar.destinationDirectory
+    from distZip.destinationDirectory
     into '.'
   }
 
